recallable/tests/ui/model_fail_duplicate_serialize_qualified.stderr
error: `#[recallable_model]` already derives `serde::Serialize` when the `serde` feature is enabled — remove the manual `#[derive(Serialize)]`
 --> tests/ui/model_fail_duplicate_serialize_qualified.rs:4:10
  |
4 | #[derive(serde::Serialize)]
  |          ^^^^^^^^^^^^^^^^
